Added README, styles

--- a/tester-project/index.html
+++ b/tester-project/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tester Project</title>
     <style>
-        button {border: none;border-radius: 0;font-family: "Open Sans", sans-serif;padding: 0.65em 1.2em;background: #c6b6c8;}
+        body{font-family:"Open Sans",sans-serif;}
+        button{border:none;border-radius:0;padding:0.65em 1.2em;cursor:pointer;color:#fff;background:#8d6e91;}
+        button:focus{background:#AB90B2}
     </style>
 </head>
 <body>
